--- a/wk_sched.css
+++ b/wk_sched.css
@@ -16,7 +16,7 @@ body {
     resize: none;
     color: #000000;
     border-left: 1px solid black;
-    padding: 10px;
+    padding: 10px;pu
   }
 
   #textarea{
